<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInsertDoll"
                android:text="@string/insert_doll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDollName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doll_name"
                app:layout_constraintTop_toBottomOf="@id/tvInsertDoll"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/etDollName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDollName"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvDollDescription"
                android:text="@string/doll_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/etDollName"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/etDollDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDollDescription"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btnSaveDoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_doll"
                app:layout_constraintTop_toBottomOf="@id/etDollDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>