<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tvFullName"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/msgFullName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/msgEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvPasswordConfirm"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/password_confirm"
        app:layout_constraintTop_toBottomOf="@id/msgPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        app:layout_constraintTop_toBottomOf="@id/msgPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFullName"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"/>

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordConfirm"/>

    <RadioGroup
        android:id="@+id/radioGenders"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGender"
        android:layout_marginLeft="20dp"
        >
        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            />
        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"
            android:layout_marginLeft="20dp"
            />
    </RadioGroup>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/msgGender"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/msgFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etFullName"
        app:layout_constraintBottom_toTopOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/msgEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintBottom_toTopOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/msgPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toTopOf="@id/tvPasswordConfirm"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/msgPasswordConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPasswordConfirm"
        app:layout_constraintBottom_toTopOf="@id/tvGender"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/red"/>

    <TextView
        android:id="@+id/msgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radioGenders"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/red"/>

</androidx.constraintlayout.widget.ConstraintLayout>