<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/update_doll_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvUpdateDoll"
                android:text="@string/update_doll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvDollName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doll_name"
                app:layout_constraintTop_toBottomOf="@id/tvUpdateDoll"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/etDollName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDollName"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvMessageDollName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/etDollName"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/tvDollDescription"
                android:text="@string/doll_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvMessageDollName"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/etDollDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvDollDescription"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/tvMessageDollDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/etDollDescription"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/red"/>

            <TextView
                android:id="@+id/tvDollImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvMessageDollDescription"
                android:text="Doll Image"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/btnDollImage"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Choose doll image"
                app:layout_constraintTop_toBottomOf="@id/tvDollImage"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/ivDollImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toBottomOf="@id/btnDollImage"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:id="@+id/btnUpdateDoll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_doll"
                app:layout_constraintTop_toBottomOf="@id/ivDollImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</FrameLayout>